force-app/main/default/objects/genesysps__Experience__c/fields/GC_Copilot_followup_text__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_followup_text__c</fullName>
    <description>Follow-up actions generated by Genesys Cloud Copilot</description>
    <label>GC Copilot Follow-up Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>