force-app/main/default/objects/genesysps__Experience__c/fields/GC_Copilot_reason_confidence__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_reason_confidence__c</fullName>
    <description>Confidence score (0-1) for the reason details</description>
    <label>GC Copilot Reason Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>