force-app/main/default/objects/genesysps__Experience__c/fields/GC_Copilot_wrap_up_1_name__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_wrap_up_1_name__c</fullName>
    <description>Primary wrap-up code name suggested by Genesys Cloud Copilot</description>
    <label>GC Copilot Wrap-up 1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>