force-app/main/default/objects/genesysps__Experience__c/fields/GC_Copilot_wrap_up_2_confidence__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_wrap_up_2_confidence__c</fullName>
    <description>Confidence score (0-1) for the secondary wrap-up code suggestion</description>
    <label>GC Copilot Wrap-up 2 Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>