force-app/main/default/objects/genesysps__Experience__c/fields/GC_Copilot_wrap_up_3_id__c.field-meta.xml
<CustomField>
    <fullName>GC_Copilot_wrap_up_3_id__c</fullName>
    <description>Unique identifier for the tertiary wrap-up code suggestion</description>
    <label>GC Copilot Wrap-up 3 ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>